[gd_scene load_steps=7 format=3 uid="uid://bnyuayhqa4otk"]

[ext_resource type="Texture2D" uid="uid://bwgmnq0uthga6" path="res://graphics/enemies/scout.png" id="1_i70sm"]
[ext_resource type="Script" uid="uid://25xg4iox5kl3" path="res://scenes/enemies/scout.gd" id="1_ns734"]
[ext_resource type="Shader" uid="uid://pr0lkxdu1vmx" path="res://scenes/enemies/scout.gdshader" id="2_08kc0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t8bpu"]
shader = ExtResource("2_08kc0")
shader_parameter/color = Color(0.891039, 0.667672, 0.670732, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i70sm"]
radius = 52.0096

[sub_resource type="CircleShape2D" id="CircleShape2D_ns734"]
radius = 760.024

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_ns734")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_t8bpu")
position = Vector2(41, 25)
rotation = 1.5708
texture = ExtResource("1_i70sm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i70sm")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_ns734")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(107, -29)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(114, 10)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]

[node name="InvulnerableFrame" type="Timer" parent="Timers"]
wait_time = 0.2

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/InvulnerableFrame" to="." method="_on_invulnerable_frame_timeout"]
